--- a/index.html
+++ b/index.html
@@ -3,10 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Один Рецепты</title>
 </head>
 <body>
-    <h1>Один Рецепты</h1>
-    <a href="recipes/lasagna.html">Лазанья</a>
+    <div class="header">
+         <h1>Один Рецепты</h1>
+         <h2>Добро пожаловать в наш кулинарный мир!</h2>
+    </div>
+   <a href="recipes/lasagna.html">Лазанья</a>
 </body>
 </html>
