Add recipes div and style it and header div

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
          <h1>Один Рецепты</h1>
          <h2>Добро пожаловать в наш кулинарный мир!</h2>
     </div>
-   <a href="recipes/lasagna.html">Лазанья</a>
+    <div class="recipes">
+        <h3>Популярные рецепты:</h3>
+        <a href="recipes/lasagna.html">Лазанья</a>
+    </div>
 </body>
 </html>
