Divided into div and connected css

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -3,34 +3,49 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Рецепт Лазаньи</title>
 </head>
 <body>
-    <a href="../index.html">Home</a>
-    <h1>Лазанья</h1>
-    <img src="https://www.allrecipes.com/thmb/iOfxQGOJTdM0K6edW-MFkn-nydE=/0x512/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/23600-worlds-best-lasagna-DDMFS-4x3-1196-24c5401652934ffb96d3d94bc9fbe2d7.jpg">
-    <h2>Описание</h2>
-    <p>Когда Джон Чендлер отправил этот рецепт лазаньи на Allrecipes более 20 лет назад, он понятия не имел, насколько успешным он станет. Один из наших самых популярных рецептов всех времен, World's Best Lasagna набирает более 7 миллионов просмотров в год и занимает место среди самых популярных рецептов лазаньи в Интернете в течение двух десятилетий. К сожалению, Джон неожиданно скончался в возрасте 53 лет — прочитайте все о его жизни и наследии здесь.</p>
-    <h3>Ингридиенты</h3>
-    <ul>
-        <li>Мясо</li>
-        <li>Лук и чеснок</li>
-        <li>Томатные продукты</li>
-        <li>Сахар</li>
-        <li>Специи и приправы</li>
-        <li>Лазанья</li>
-        <li>Сыры</li>
-        <li>Яйцо</li>
-    </ul>
-    <h3>Шаги(Слои)</h3>
-    <ol>
-        <li>Мясной соус</li>
-        <li>Лапша</li>
-        <li>Смесь рикотты</li>
-        <li>ломтики моцареллы</li>
-        <li>Мясной соус</li>
-        <li>сыр пармезан</li>
-        <li>Повторите слои, затем посыпьте оставшимся пармезаном</li>
-    </ol>
+    <div class="back">
+        <a href="../index.html">Home</a>
+    </div>
+    <div class="header">
+        <h1>Один Рецепты</h1>
+        <h2>Добро пожаловать в наш кулинарный мир!</h2>
+        <h3>Лазанья</h3>
+        <img src="https://www.allrecipes.com/thmb/iOfxQGOJTdM0K6edW-MFkn-nydE=/0x512/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/23600-worlds-best-lasagna-DDMFS-4x3-1196-24c5401652934ffb96d3d94bc9fbe2d7.jpg">
+    </div>
+    <div class="content">
+        <h3>World's Best Lasagna</h3>
+        <p>Этот рецепт лазаньи был опубликован на Allrecipes в 1998 году и с тех пор стал одним из самых популярных рецептов на сайте.</p>
+        <p>Автор: Джон Чендлер</p>
+        <p>Время приготовления: 1 час 30 минут</p>
+        <p>Порции: 12</p>
+        <p>Рейтинг: ★★★★★ (4.8 из 5)</p>
+            <h2>Описание</h2>
+        <p>Когда Джон Чендлер отправил этот рецепт лазаньи на Allrecipes более 20 лет назад, он понятия не имел, насколько успешным он станет. Один из наших самых популярных рецептов всех времен, World's Best Lasagna набирает более 7 миллионов просмотров в год и занимает место среди самых популярных рецептов лазаньи в Интернете в течение двух десятилетий. К сожалению, Джон неожиданно скончался в возрасте 53 лет — прочитайте все о его жизни и наследии здесь.</p>
+        <h3>Ингридиенты</h3>
+        <ul>
+            <li>Мясо</li>
+            <li>Лук и чеснок</li>
+            <li>Томатные продукты</li>
+            <li>Сахар</li>
+            <li>Специи и приправы</li>
+            <li>Лазанья</li>
+            <li>Сыры</li>
+            <li>Яйцо</li>
+        </ul>
+        <h3>Шаги(Слои)</h3>
+        <ol>
+            <li>Мясной соус</li>
+            <li>Лапша</li>
+            <li>Смесь рикотты</li>
+            <li>ломтики моцареллы</li>
+            <li>Мясной соус</li>
+            <li>сыр пармезан</li>
+            <li>Повторите слои, затем посыпьте оставшимся пармезаном</li>
+        </ol>
+    </div>
 </body>
 </html>
